# tipspace-core

./: Cargo.toml  diesel.toml
migrations/: 20250108130013_create_table_user.up.sql  20250108132353_balances.down.sql  20250108132353_balances.up.sql  20250108134357_create_oauth_table.down.sql  20250108134357_create_oauth_table.up.sql  20250109020650_create_table_transaction.up.sql  20250109021911_create_table_tip.down.sql  20250109021911_create_table_tip.up.sql
migrations/2025-01-11-131603_create_table_user/: up.sql
migrations/2025-01-11-131633_create_table_user_balance/: down.sql  up.sql
migrations/2025-01-11-131719_create_table_user_oauth/: down.sql  up.sql
migrations/2025-01-11-131802_create_table_transaction/: up.sql
migrations/2025-01-11-131820_create_table_tip/: down.sql  up.sql
src/: main.rs  schema.rs
src/infrastructure/: config.rs  database.rs  mod.rs
